src/pages/ProfilePage/components/ProfileHead/ProfileHead.module.scss
@import "../../../../sassStyles/mixins";
@import "../../../../sassStyles/variables";

.head {
	padding: 1rem;
	margin-bottom: 1rem;
	border-radius: $content-border-radius;
	border: 1px solid var(--content-border);
	background-color: var(--content-background);
	overflow: hidden;
	.profile {
		margin-bottom: 1rem;
		display: flex;
		.left {
			margin-right: 1rem;
			.pfp {
				position: relative;
				width: 4rem;
				height: 4rem;
				img {
					width: 100%;
					height: 100%;
					border-radius: $content-border-radius;
					object-fit: cover;
				}
				svg {
					width: 100%;
					height: 100%;
					padding: 1rem;
					color: var(--text-title);
					border-radius: $content-border-radius;
					border: 1px solid var(--content-border);
				}
			}
		}
		.details {
			width: 100%;
			.display {
				color: var(--text-title);
				font-weight: 600;
				font-size: 1.6rem;
			}
			.username {
				color: var(--text-secondary);
				&::before {
					content: "@";
				}
			}
			.bio {
				color: var(--text);
			}
		}
	}
	.controls {
		display: flex;
		justify-content: space-evenly;
		> * {
			margin-right: 0.5rem;
			margin-left: 0.5rem;
			&:last-of-type {
				margin-right: 0rem;
				margin-left: 0.5rem;
			}
			&:first-of-type {
				margin-right: 0.5rem;
				margin-left: 0rem;
			}
			width: 100%;
			border-radius: $content-border-radius;
		}
	}
}

.loading {
	background-color: var(--content-background);
	width: 100%;
	display: flex;
	justify-content: center;
	border: 1px solid var(--content-border);
	border-radius: $content-border-radius;
	.loadingElipses {
		div {
			background-color: var(--text-title);
		}
	}
}

